--- a/index.html
+++ b/index.html
@@ -8,19 +8,63 @@
 
 
 
-
 <title>Sarbendu Rakshit</title>
 </head>
 <body>
 
 
-<img src="photo.jpg" alt="Sunflower" style="float: right; margin-right: 1150px;" width="120" height="144" align="top">
+<img src="photo.jpg" alt="Sunflower" style="float: right; margin-right: 10px;" width="120" height="144" align="top">
 <h1 style="color:blue">Sarbendu Rakshit</h1>
-<p style="font-size:30px">Indian Statistical Institute, Kolkata</p>
 
 
-<p style="color:blue">This is a paragraph.</p>
-<p style="font-size:20px"> I am a student of mathematics with a strong interest in dynamical systems and differential equations. Currently, my research deals with emergent behaviors in networked dynamical systems with special attention to their stability analysis.</p> 
+<br>
+<h2>​<u>About Me</u></h2>
+	<li style="font-size:20px"> I am a researcher of mathematics with a strong interest in dynamical systems and differential equations. Currently, my research deals with emergent behaviours in networked dynamical systems with special attention to their stability analysis.</li>
+	</ol>	
+
+
+<br>
+<h2><u>Contact Details</u></h2>
+		<li>Sarbendu Rakshit</li>
+    <li>Research Scholar</li>
+    <li>Physics & Applied Mathematics Unit</li>
+    <li>Indian Statistical Institute, Kolkata</li>
+    <li>203, B. T. Road, Kolkata - 700 108</li>
+    <li>Send Email: <a href = "mailto: sarbendu.math@gmail.com">sarbendu.math@gmail.com</a></li>
+    <li>My research profile at <a href="https://scholar.google.com/citations?user=TPSE4JEAAAAJ&hl=en">Google Scholar</a></li>
+    <li>My research profile at <a href="https://www.researchgate.net/profile/Sarbendu-Rakshit-2">ResearchGate</a></li>
+    <li>Connect me on <a href="https://www.linkedin.com/in/sarbendu-rakshit-782168100/">LinkedIn</a></li>
+  </ol>
+
+
+<br>
+<h2><u>List of Publications</u>:</h2>
+	<ol reversed>
+<li><strong>Sarbendu Rakshit</strong>, F. Parastesh, S. N. Chowdhury, S. Jafari, J. Kurths, & D. Ghosh, “Relay interlayer synchronization: Invariance and stability conditions”, Nonlinearity <strong>Accepted</strong> (2021).</li>
+<li>D. Ghosh, M. Frasca, A. Rizzo, S. Majhi, <strong>Sarbendu Rakshit</strong>, K. A. Bittner, & S. Boccaletti, “The synchronized dynamics of time-varying networks”, Physics Reports <strong>Accepted</strong> (2021).</li>
+<li><strong>Sarbendu Rakshit</strong>, S. Majhi, J. Kurths, & D. Ghosh, “Neuronal synchronization in long-ranged time-varying networks”, Chaos <strong>31</strong>, 073129 (2021).</li>
+<li>N. Frolov, <strong>Sarbendu Rakshit</strong>, V. Maksimenko, D. Kirsanov, D. Ghosh, & A. Hramov, “Coexistence of interdependence and competition in adaptive multilayer network”, Chaos, Solitons and Fractals <strong>147</strong>, 110955 (2021).</li>
+<li>S. N. Chowdhury, <strong>Sarbendu Rakshit</strong>, J. M. Buldú, D. Ghosh, & C. Hens, “Antiphase synchronization in multiplex networks with attractive and repulsive interactions”, Physical Review E <strong>103</strong>, 032310 (2021).</li>
+<li><strong>Sarbendu Rakshit</strong>, & D. Ghosh, “Generalized synchronization on the onset of auxiliary system approach”, Chaos <strong>30</strong>, 111102 (2020).</li>
+<li>N. Frolov, V. Maksimenko, S. Majhi, <strong>Sarbendu Rakshit</strong>, D. Ghosh, & A. Hramov, “Chimera-like behavior in a heterogeneous Kuramoto model: the interplay between the attractive and repulsive coupling”, Chaos <strong>30</strong>, 081102 (2020).</li>
+<li>A. Ray, <strong>Sarbendu Rakshit</strong>, G. K. Basak, S. K. Dana, & D. Ghosh, “Understanding the origin of extreme events in El Niño southern oscillation”, Physical Review E <strong>101</strong>, 062210 (2020).</li>
+<li><strong>Sarbendu Rakshit</strong>, S. Majhi, & D. Ghosh, “Synchronization in complex networks with long-range interactions”, Journal of Physics A: Mathematical and Theoretical <strong>53</strong>, 154002 (2020).</li>
+<li><strong>Sarbendu Rakshit</strong>, B. K. Bera, E. M. Bollt, & D. Ghosh, “Intralayer synchronization in evolving multiplex hypernetworks: Analytical approach”, SIAM Journal on Applied Dynamical Systems <strong>19</strong>, 918-963 (2020).</li>
+<li><strong>Sarbendu Rakshit</strong>, B. K. Bera, & D. Ghosh, “Invariance and stability conditions of interlayer synchronization manifold”, Physical Review E <strong>101</strong>, 012308 (2020).</li>
+<li><strong>Sarbendu Rakshit</strong>, B. K. Bera, J. Kurths, & D. Ghosh, “Enhancing synchrony in multiplex network due to rewiring frequency”, Proceedings of the Royal Society A <strong>475</strong>, 20190460 (2019).</li>
+<li>B. K. Bera, <strong>Sarbendu Rakshit</strong>, & D. Ghosh, “Intralayer synchronization in neuronal multiplex network”, European Physical Journal Special Topics <strong>228</strong>, 2441-2454 (2019).</li>
+<li><strong>Sarbendu Rakshit</strong>, Z. Faghani, F. Parastesh, S. Panahi, S. Jafari, D. Ghosh, & M. Perc, “Transitions from chimeras to coherence: An analytical approach by means of the coherent stability function”, Physical Review E <strong>100</strong>, 012315 (2019).</li>
+<li>B. K. Bera, <strong>Sarbendu Rakshit</strong>, D. Ghosh, & J. Kurths, “Spike chimera states and firing regularities in neuronal hypernetworks”, Chaos <strong>29</strong>, 053115 (2019).</li>
+<li>A. Ray, <strong>Sarbendu Rakshit</strong>, D. Ghosh, & S. K. Dana, “Intermittent large deviation of chaotic trajectory in Ikeda map: Signature of extreme events”, Chaos <strong>29</strong>, 043131 (2019).</li>
+<li><strong>Sarbendu Rakshit</strong>, B. K. Bera, & D. Ghosh, “Synchronization in temporal multiplex neuronal hypernetwork”, Physical Review E <strong>98</strong>, 032305 (2018).</li>
+<li><strong>Sarbendu Rakshit</strong>, A. Ray, B. K. Bera, & D. Ghosh, “Synchronization and firing patterns of coupled Rulkov neuronal map”, Nonlinear Dynamics <strong>94</strong>, 785 (2018).</li>
+<li><strong>Sarbendu Rakshit</strong>, B. K. Bera, D. Ghosh, & S. Sinha, “Emergence of synchronization and regularity in firing patterns in time-varying neural hypernetworks”, Physical Review E <strong>97</strong>, 052304 (2018).</li>
+<li><strong>Sarbendu Rakshit</strong>, S. Majhi, B. K. Bera, S. Sinha, & D. Ghosh, “Time-varying multiplex network: Intralayer and interlayer synchronization”, Physical Review E <strong>96</strong>, 062308 (2017).</li>
+<li><strong>Sarbendu Rakshit</strong>, B. K. Bera, M. Perc, & D. Ghosh, “Basin stability for chimera states”, Scientific Reports <strong>7</strong>, 2412 (2017).</li>
+<li><strong>Sarbendu Rakshit</strong>, B. K. Bera, S. Majhi, C. Hens & D. Ghosh, “Basin stability measure of different steady states in coupled oscillators”, Scientific Reports <strong>7</strong>, 45909 (2017).</li>
+  </ol>
+
+
 
 
 </body>
