--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <br>
 <h2>​<u>About Me</u></h2>
-	<li style="font-size:20px"> I am a researcher of mathematics with a strong interest in dynamical systems and differential equations. Currently, my research deals with emergent behaviours in networked dynamical systems with special attention to their stability analysis.</li>
+	<li style="font-size:20px"> I am a researcher of mathematics with a strong interest in dynamical systems and differential equations. Currently, my research deals with emergent behaviours in networked dynamical systems with special attention to their invariance and stability analysis.</li>
 	</ol>	
 
 
@@ -29,7 +29,7 @@
     <li>Research Scholar</li>
     <li>Physics & Applied Mathematics Unit</li>
     <li>Indian Statistical Institute, Kolkata</li>
-    <li>203, B. T. Road, Kolkata - 700 108</li>
+    <li>203, B. T. Road, Kolkata - 700108</li>
     <li>Send Email: <a href = "mailto: sarbendu.math@gmail.com">sarbendu.math@gmail.com</a></li>
     <li>My research profile at <a href="https://scholar.google.com/citations?user=TPSE4JEAAAAJ&hl=en">Google Scholar</a></li>
     <li>My research profile at <a href="https://www.researchgate.net/profile/Sarbendu-Rakshit-2">ResearchGate</a></li>
