--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <br>
 <h2><u>List of Publications</u>:</h2>
 	<ol reversed>
-<li><strong>Sarbendu Rakshit</strong>, F. Parastesh, S. N. Chowdhury, S. Jafari, J. Kurths, & D. Ghosh, “Relay interlayer synchronization: Invariance and stability conditions”, Nonlinearity <strong>Accepted</strong> (2021).</li>
+<li><strong>Sarbendu Rakshit</strong>, F. Parastesh, S. N. Chowdhury, S. Jafari, J. Kurths, & D. Ghosh, “Relay interlayer synchronization: Invariance and stability conditions”, <a style="color:blue">Nonlinearity</a> <strong>Accepted</strong> (2021).</li>
 <li>D. Ghosh, M. Frasca, A. Rizzo, S. Majhi, <strong>Sarbendu Rakshit</strong>, K. A. Bittner, & S. Boccaletti, “The synchronized dynamics of time-varying networks”, Physics Reports <strong>Accepted</strong> (2021).</li>
 <li><strong>Sarbendu Rakshit</strong>, S. Majhi, J. Kurths, & D. Ghosh, “Neuronal synchronization in long-ranged time-varying networks”, Chaos <strong>31</strong>, 073129 (2021).</li>
 <li>N. Frolov, <strong>Sarbendu Rakshit</strong>, V. Maksimenko, D. Kirsanov, D. Ghosh, & A. Hramov, “Coexistence of interdependence and competition in adaptive multilayer network”, Chaos, Solitons and Fractals <strong>147</strong>, 110955 (2021).</li>
@@ -59,11 +59,10 @@
 <li><strong>Sarbendu Rakshit</strong>, B. K. Bera, & D. Ghosh, “Synchronization in temporal multiplex neuronal hypernetwork”, Physical Review E <strong>98</strong>, 032305 (2018).</li>
 <li><strong>Sarbendu Rakshit</strong>, A. Ray, B. K. Bera, & D. Ghosh, “Synchronization and firing patterns of coupled Rulkov neuronal map”, Nonlinear Dynamics <strong>94</strong>, 785 (2018).</li>
 <li><strong>Sarbendu Rakshit</strong>, B. K. Bera, D. Ghosh, & S. Sinha, “Emergence of synchronization and regularity in firing patterns in time-varying neural hypernetworks”, Physical Review E <strong>97</strong>, 052304 (2018).</li>
-<li><strong>Sarbendu Rakshit</strong>, S. Majhi, B. K. Bera, S. Sinha, & D. Ghosh, “Time-varying multiplex network: Intralayer and interlayer synchronization”, Physical Review E <strong>96</strong>, 062308 (2017).</li>
-<li><strong>Sarbendu Rakshit</strong>, B. K. Bera, M. Perc, & D. Ghosh, “Basin stability for chimera states”, Scientific Reports <strong>7</strong>, 2412 (2017).</li>
-<li><strong>Sarbendu Rakshit</strong>, B. K. Bera, S. Majhi, C. Hens & D. Ghosh, “Basin stability measure of different steady states in coupled oscillators”, Scientific Reports <strong>7</strong>, 45909 (2017).</li>
+<li><strong>Sarbendu Rakshit</strong>, S. Majhi, B. K. Bera, S. Sinha, & D. Ghosh, “Time-varying multiplex network: Intralayer and interlayer synchronization”, <a href = "https://journals.aps.org/pre/abstract/10.1103/PhysRevE.96.062308">Physical Review E</a> <strong>96</strong>, 062308 (2017).</li>
+<li><strong>Sarbendu Rakshit</strong>, B. K. Bera, M. Perc, & D. Ghosh, “Basin stability for chimera states”, <a href = "https://www.nature.com/articles/s41598-017-02409-5">Scientific Reports</a> <strong>7</strong>, 2412 (2017).</li>
+<li><strong>Sarbendu Rakshit</strong>, B. K. Bera, S. Majhi, C. Hens & D. Ghosh, “Basin stability measure of different steady states in coupled oscillators”, <a href = "https://www.nature.com/articles/srep45909">Scientific Reports</a> <strong>7</strong>, 45909 (2017).</li>
   </ol>
-
 
 
 
