--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 
 <br>
-<h2><u>List of Publications</u>:</h2>
+<h2><u>List of Journal Publications</u>:</h2>
 	<ol reversed>
 <li><strong>Sarbendu Rakshit</strong>, F. Parastesh, S. N. Chowdhury, S. Jafari, J. Kurths, & D. Ghosh, “Relay interlayer synchronization: Invariance and stability conditions”, <a style="color:blue">Nonlinearity</a> <strong>Accepted</strong> (2021).</li>
 <li>D. Ghosh, M. Frasca, A. Rizzo, S. Majhi, <strong>Sarbendu Rakshit</strong>, K. A. Bittner, & S. Boccaletti, “The synchronized dynamics of time-varying networks”, Physics Reports <strong>Accepted</strong> (2021).</li>
@@ -63,7 +63,12 @@
 <li><strong>Sarbendu Rakshit</strong>, B. K. Bera, M. Perc, & D. Ghosh, “Basin stability for chimera states”, <a href = "https://www.nature.com/articles/s41598-017-02409-5">Scientific Reports</a> <strong>7</strong>, 2412 (2017).</li>
 <li><strong>Sarbendu Rakshit</strong>, B. K. Bera, S. Majhi, C. Hens & D. Ghosh, “Basin stability measure of different steady states in coupled oscillators”, <a href = "https://www.nature.com/articles/srep45909">Scientific Reports</a> <strong>7</strong>, 45909 (2017).</li>
   </ol>
-
+  
+ 
+<h2><u>List of Conference Publications</u>:</h2>
+	<ol reversed>
+<li>N. Frolov, V. Maksimenko, D. Ghosh, S. Majhi, & <strong>Sarbendu Rakshit</strong>, “Route to Coherence in a Frequency-Heterogeneous Kuramoto Network”, <strong>IEEE</strong> (2020) DOI: 10.1109/DC-NAIR50402.2020.9216818.</li>
+  </ol>
 
 
 </body>
