--- a/index.html
+++ b/index.html
@@ -67,9 +67,13 @@
  
 <h2><u>List of Conference Publications</u>:</h2>
 	<ol reversed>
-<li>N. Frolov, V. Maksimenko, D. Ghosh, S. Majhi, & <strong>Sarbendu Rakshit</strong>, “Route to Coherence in a Frequency-Heterogeneous Kuramoto Network”, <strong>IEEE</strong> (2020) DOI: 10.1109/DC-NAIR50402.2020.9216818.</li>
+<li>N. Frolov, V. Maksimenko, D. Ghosh, S. Majhi, & <strong>Sarbendu Rakshit</strong>, “Route to Coherence in a Frequency-Heterogeneous Kuramoto Network”, <strong>IEEE</strong> (2020) DOI: <a href = "https://ieeexplore.ieee.org/document/9216818">10.1109/DC-NAIR50402.2020.9216818</a>.</li>
   </ol>
 
+
+
+
+ <a href='https://thesiswritingservice.net/'>professional Writing Service</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=1d64a9c31803094787b4e0202379e085c7effb16'></script> <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/893129/t/2"></script>
 
 </body>
 </html>
