--- a/index.html
+++ b/index.html
@@ -115,8 +115,11 @@ ul {	columns: 3;
 
     <div id="Education" class="tabcontent" style="display: block;">
         <h2> <u>Academic Qualifications</u> </h2>
-        <p><b>2015–2016</b>: Pre Ph.D. Course Work from Indian Statistical Institute, Kolkata, India. 81.2%.</p>
-        <p><b>2013–2015</b>: Masters of Science in Mathematics from Siksha Bhavana, Visva-Bharati, CGPA-9.24. Elective Group: Applied Stream</p>
+        <p><b>2015-2016</b>: Pre Ph.D. Course Work from Indian Statistical Institute, Kolkata, India. 81.2%.</p>
+        <p><b>2013-2015</b>: Masters of Science in Mathematics from Siksha Bhavana, Visva-Bharati, CGPA-9.24. Elective Group: Applied Stream</p>
+        <p><b>2010-2013</b>: Bachelor of Science in Mathematics from Siksha Bhavana, Visva-Bharati, 74.9%. First Class Honours with Distinction</p>
+        <p><b>2008-2010</b>: Pre Degree (12 th Level), Uttar Siksha Sadana, Visva-Bharati, 82.83%.</p>
+				<p><b>2006-2008</b>: School Certificate (10 th Level), Siksha Satra, Visva-Bharati, 77.78%.</p>
     </div>
 
     <div id="Research" class="tabcontent" style="display: none;">
