--- a/index.html
+++ b/index.html
@@ -118,15 +118,26 @@ ul {	columns: 3;
         <p><b>2015-2016</b>: Pre Ph.D. Course Work from Indian Statistical Institute, Kolkata, India. 81.2%.</p>
         <p><b>2013-2015</b>: Masters of Science in Mathematics from Siksha Bhavana, Visva-Bharati, CGPA-9.24. Elective Group: Applied Stream</p>
         <p><b>2010-2013</b>: Bachelor of Science in Mathematics from Siksha Bhavana, Visva-Bharati, 74.9%. First Class Honours with Distinction</p>
-        <p><b>2008-2010</b>: Pre Degree (12 th Level), Uttar Siksha Sadana, Visva-Bharati, 82.83%.</p>
-				<p><b>2006-2008</b>: School Certificate (10 th Level), Siksha Satra, Visva-Bharati, 77.78%.</p>
+        <p><b>2008-2010</b>: Pre Degree (12th Level) from Uttar Siksha Sadana, Visva-Bharati, 82.83%.</p>
+				<p><b>2006-2008</b>: School Certificate (10th Level) from Siksha Satra, Visva-Bharati, 77.78%.</p>
+				
+				<br>
+				<h2> <u>Academic Achievements</u> </h2>
+				<p><b>2019</b>: Selected for CSIR foreign Travel Grant to attain the conference “Dynamic Days Europe 2019”, which was held at Rostock, Germany, during 2-6 September 2019. Awarding Agency: CSIR</p>
+				<p><b>2015</b>: Awarded Junior Research Fellowship in Physics & Applied Mathematics in Physics & Applied Mathematics Unit of Indian Statistical Institute, Kolkata on the year 2015.</p>
+				<p><b>2015</b>: Secure Rank 2nd in order of merit among the successful students in M. Sc. Examination, 2015 in Mathematics.</p>
+				<p><b>2015</b>: Awarded Junior Research Fellowship (NET - Dec, 2014) in the subject Mathematical Science under CSIR fellowship scheme, All India Rank 45.</p>
+				<p><b>2015</b>: Qualified Graduate Aptitude Test in Engineering (GATE), on February 2015, All India Rank 11.</p>
+				<p><b>2014</b>: Selected for the NBHM postgraduate scholarship in mathematics on the year 2014-15, Awarding Agency: National Board for Higher Mathematics.</p>
+				<p><b>2013</b>: Selected for the Post-Graduate Merit Scholarship for University Rank Holders on the year 2013, Awarding Agency: University Grants Commission.</p>
+				<p><b>2013</b>: Secure Rank 2nd (Jointly) in order of merit among the successful students in B. Sc. (Honours) Examination, 2013 in Mathematics.</p>
     </div>
 
     <div id="Research" class="tabcontent" style="display: none;">
 
             <p style="font-size:large;">  I am a researcher of mathematics with a strong interest in dynamical systems and differential equations. Currently, my research deals with emergent behaviours in networked dynamical systems with special attention to their invariance and stability analysis. </p>
             
-<h2><u>Refereed Articles From Journals</u>:</h2>
+<h2><u>Refereed Articles From Journals</u></h2>
 <ul>
 <li>Mathematical Reviews</li>
 <li>Physical Review E</li>
