--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@ ul {	columns: 3;
 
 <h2><u>List of Journal Publications</u></h2>
 	<ol reversed>
-<li><strong>Sarbendu Rakshit</strong>, F. Parastesh, S. N. Chowdhury, S. Jafari, J. Kurths, & D. Ghosh, “Relay interlayer synchronization: Invariance and stability conditions”, <a style="color:blue">Nonlinearity</a> <strong>Accepted</strong> (2021).</li>
 <li>D. Ghosh, M. Frasca, A. Rizzo, S. Majhi, <strong>Sarbendu Rakshit</strong>, K. A. Bittner, & S. Boccaletti, “The synchronized dynamics of time-varying networks”, Physics Reports <strong>Accepted</strong> (2021).</li>
+<li><strong>Sarbendu Rakshit</strong>, F. Parastesh, S. N. Chowdhury, S. Jafari, J. Kurths, & D. Ghosh, “Relay interlayer synchronization: Invariance and stability conditions”, <a href = "https://iopscience.iop.org/article/10.1088/1361-6544/ac3c2f">Nonlinearity</a> <strong>35</strong>, 681-718 (2022).</li>
 <li><strong>Sarbendu Rakshit</strong>, S. Majhi, J. Kurths, & D. Ghosh, “Neuronal synchronization in long-ranged time-varying networks”, Chaos <strong>31</strong>, 073129 (2021).</li>
 <li>N. Frolov, <strong>Sarbendu Rakshit</strong>, V. Maksimenko, D. Kirsanov, D. Ghosh, & A. Hramov, “Coexistence of interdependence and competition in adaptive multilayer network”, Chaos, Solitons and Fractals <strong>147</strong>, 110955 (2021).</li>
 <li>S. N. Chowdhury, <strong>Sarbendu Rakshit</strong>, J. M. Buldú, D. Ghosh, & C. Hens, “Antiphase synchronization in multiplex networks with attractive and repulsive interactions”, Physical Review E <strong>103</strong>, 032310 (2021).</li>
